# shrun

./: .gitignore  .hlint.yaml  .yamllint.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  baseline.csv  cabal.ghc9101.project  cabal.ghc9101.project.freeze  cabal.ghc9102.project.freeze  cabal.ghc9121.project  cabal.ghc9121.project.freeze  cabal.ghc9122.project  cabal.ghc9122.project.freeze  cabal.ghc964.project.freeze  cabal.ghc966.project  cabal.ghc966.project.freeze  cabal.ghc982.project  cabal.ghc982.project.freeze  cabal.ghc984.project  cabal.ghc984.project.freeze  cabal.project  cabal.project.freeze  cabal.project.ghc964  configuration.md  faq.md  flake.nix  ghc.nix  hie.yaml  shell-run.cabal  shell-runner.cabal  shell.nix  shrun.cabal  stack.yaml  stack_lts-18.yaml  stack_nightly.yaml
.github/scripts/: notify_tests.sh  release_linux.sh  release_linux_static.sh  release_osx.sh  rename_linux.sh  rename_osx.sh  verify_env.sh
.github/workflows/: cabal.yaml  cabal_8-10.yaml  cabal_9-0.yaml  cabal_9-2.yaml  cabal_ci.yaml  ci.yaml  ghc_8-10-7.yaml  ghc_8-10.yaml  ghc_9-0-2.yaml  ghc_9-0.yaml  ghc_9-2-1.yaml  ghc_9-2.yaml  haddock_ci.yaml  hlint_ci.yaml  nix.yaml  nix_ci.yaml  ormolu_ci.yaml  stack.yaml  stack_ci.yaml  style.yaml  style_ci.yaml
app/: Main.hs
benchmarks/: Main.hs  baseline_9.4.6.csv  baseline_9.6.2.csv  baseline_9.6.4.csv  baseline_9.8.2.csv  baseline_ubuntu-latest_9.10.1_ci.csv  baseline_ubuntu-latest_9.10.2_ci.csv  baseline_ubuntu-latest_9.12.1_ci.csv  baseline_ubuntu-latest_9.12.2_ci.csv  baseline_ubuntu-latest_9.4.5_ci.csv  baseline_ubuntu-latest_9.4.8_ci.csv  baseline_ubuntu-latest_9.6.2_ci.csv  baseline_ubuntu-latest_9.6.5_ci.csv  baseline_ubuntu-latest_9.6.6_ci.csv  baseline_ubuntu-latest_9.6.7_ci.csv  baseline_ubuntu-latest_9.8.1_ci.csv  baseline_ubuntu-latest_9.8.2_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv  bench.csv
benchmarks/Bench/: Prelude.hs
benchmarks/Benchmark/: Prelude.hs
ci_scripts/: cabal-fmt.sh  haddock.sh  ormolu.sh
doc/: ShellRun-Async.html  ShellRun-Class-Has.html  ShellRun-Class-MonadLogger.html  ShellRun-Class-MonadShell.html  ShellRun-Math-NonNegative.html  ShellRun-Math-Positive.html  ShellRun-Math-RAdd.html  ShellRun-Math-REquals.html  ShellRun-Math.html  ShellRun-Parsing-Commands.html  ShellRun-Parsing-Env.html  ShellRun-Parsing-Legend-Internal.html  ShellRun-Types-Command.html  ShellRun-Types-Env-NativeLog.html  ShellRun-Types-Env.html  ShellRun-Types-IO.html  ShellRun-Types-Legend.html  ShellRun-Utils-Internal.html  ShellRun-Utils-Text.html  ShellRun-Utils.html  ShellRun.html  doc-index.html  index.html  shell-run.haddock  shell-run.txt
doc/src/: ShellRun.Async.html  ShellRun.Class.Has.html  ShellRun.Class.MonadLogger.html  ShellRun.Class.MonadShell.html  ShellRun.IO.html  ShellRun.Math.NonNegative.html  ShellRun.Math.Positive.html  ShellRun.Math.RAdd.html  ShellRun.Math.REquals.html  ShellRun.Math.html  ShellRun.Parsing.Commands.html  ShellRun.Parsing.Env.html  ShellRun.Parsing.Legend.Internal.html  ShellRun.Parsing.Legend.html  ShellRun.Types.Command.html  ShellRun.Types.Env.NativeLog.html  ShellRun.Types.Env.html  ShellRun.Types.Legend.html  ShellRun.Utils.Internal.html  ShellRun.Utils.Text.html  ShellRun.Utils.html  ShellRun.html
docker/alpine_amd64/: Dockerfile
docker/alpine_arm64v8/: Dockerfile
docs/: ShellRun-Async.html  ShellRun-Class-Has.html  ShellRun-Class-MonadLogger.html  ShellRun-Class-MonadShell.html  ShellRun-Data-Command.html  ShellRun-Data-Env.html  ShellRun-Data-IO.html  ShellRun-Data-Legend.html  ShellRun-Env.html  ShellRun-IO.html  ShellRun-Logging-Log.html  ShellRun-Logging-MonadLogger.html  ShellRun-Logging-Queue.html  ShellRun-Logging.html  ShellRun-Math-NonNegative.html  ShellRun-Math-Positive.html  ShellRun-Math-RAdd.html  ShellRun-Math-REquals.html  ShellRun-Math-RMult.html  ShellRun-Math-Supremum.html  ShellRun-Math.html  ShellRun-Parsing-Args.html  ShellRun-Parsing-Commands.html  ShellRun-Parsing-Env.html  ShellRun-Parsing-Legend-Internal.html  ShellRun-Parsing-Legend.html  ShellRun-Types-Command.html  ShellRun-Types-Env-NativeLog.html  ShellRun-Types-Env-SubLogging.html  ShellRun-Types-Env.html  ShellRun-Types-IO.html  ShellRun-Types-Legend.html  ShellRun-Utils-Internal.html  ShellRun-Utils-Text.html  ShellRun-Utils.html  ShellRun.html  Shrun-Configuration-Args-Parsing-CmdLogging.html  Shrun-Configuration-Args-Parsing-CommandLogging.html  Shrun-Configuration-Args-Parsing-CommonLogging.html  Shrun-Configuration-Args-Parsing-ConsoleLogging.html  (+114 more)
docs/doc/: ShellRun-Class-Has.html  ShellRun-IO.html  ShellRun-Math.html  ShellRun-Types-IO.html
docs/src/: Paths_shrun.html  ShellRun.Async.html  ShellRun.Class.Has.html  ShellRun.Class.MonadLogger.html  ShellRun.Class.MonadShell.html  ShellRun.Data.Command.html  ShellRun.Data.Env.html  ShellRun.Data.IO.html  ShellRun.Data.Legend.html  ShellRun.Env.html  ShellRun.IO.html  ShellRun.Logging.Log.html  ShellRun.Logging.MonadLogger.html  ShellRun.Logging.Queue.html  ShellRun.Logging.html  ShellRun.Math.NonNegative.html  ShellRun.Math.Positive.html  ShellRun.Math.RAdd.html  ShellRun.Math.REquals.html  ShellRun.Math.RMult.html  ShellRun.Math.Supremum.html  ShellRun.Math.html  ShellRun.Parsing.Args.html  ShellRun.Parsing.Commands.html  ShellRun.Parsing.Env.html  ShellRun.Parsing.Legend.Internal.html  ShellRun.Parsing.Legend.html  ShellRun.Prelude.html  ShellRun.Types.Command.html  ShellRun.Types.Env.NativeLog.html  ShellRun.Types.Env.SubLogging.html  ShellRun.Types.Env.html  ShellRun.Types.IO.html  ShellRun.Types.Legend.html  ShellRun.Utils.Internal.html  ShellRun.Utils.Text.html  ShellRun.Utils.html  ShellRun.html  (+71 more)
documentation/: configuration.md  development.md  faq.md
examples/: bashrc  config.toml  config_osx.toml  default.toml  legend.txt  shell-run.legend
nix/: cabal.nix  cabal_base.nix  ghc_base.nix  lib.nix  stack.nix  stack_base.nix
scripts/: cabal-fmt_inplace.sh  gen_haddock.sh  haddock.sh  ormolu_inplace.sh
src/: ShellRun.hs  ShellRunner.hs  Shrun.hs
tools/: bench.sh  format.sh  haddock.sh  lint-refactor.sh  lint.sh
(+401 files in other folders)
