cabal-version:      2.4
name:               shell-run
version:            0.4.0.1
license:            BSD-3-Clause
license-file:       LICENSE
tested-with:        GHC ==9.2.3
copyright:          2021 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/shell-run/
bug-reports:        https://github.com/tbidne/shell-run/issues
synopsis:           A utility program for running shell commands concurrently.
description:
  Please see the README at https://github.com/tbidne/shell-run/#readme

category:           Shell scripting, Utils, Concurrency
extra-source-files:
  CHANGELOG.md
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/shell-run

common common-exts
  default-extensions:
    NoImplicitPrelude
    NoStarIsType
    ApplicativeDo
    DataKinds
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    TypeFamilies
    NoFieldSelectors

library
  import:           common-exts
  exposed-modules:
    ShellRun
    ShellRun.Args
    ShellRun.Command
    ShellRun.Data.FilePathDefault
    ShellRun.Data.InfNum
    ShellRun.Data.NonEmptySeq
    ShellRun.Data.Supremum
    ShellRun.Data.Timeout
    ShellRun.Effects.MonadFSReader
    ShellRun.Effects.MonadProcRunner
    ShellRun.Effects.MonadTime
    ShellRun.Env
    ShellRun.Env.Types
    ShellRun.IO
    ShellRun.Legend
    ShellRun.Legend.Internal
    ShellRun.Logging.Formatting
    ShellRun.Logging.Log
    ShellRun.Logging.Queue
    ShellRun.Logging.RegionLogger
    ShellRun.Logging.Types
    ShellRun.Prelude
    ShellRun.ShellT
    ShellRun.Utils

  build-depends:
    , algebra-simple        ^>=0.1
    , base                  >=4.14.1.0 && <4.17
    , bytestring            >=0.10.12  && <0.12
    , clock                 >=0.7.2    && <0.9
    , concurrent-output     ^>=1.10.7
    , containers            ^>=0.6.2.1
    , directory             ^>=1.3.5.0
    , exceptions            ^>=0.10.4
    , filepath              ^>=1.4.2.1
    , gitrev                >=1.2.0    && <1.4
    , hashable              >=1.3.0.0  && <1.5
    , monad-loops           >=0.3      && <0.5
    , mtl                   >=2.2.1    && <2.4
    , optics-core           ^>=0.4
    , optics-th             ^>=0.4
    , optparse-applicative  >=0.15     && <0.18
    , package-version       ^>=0.1.0.0
    , pretty-terminal       ^>=0.1
    , process               ^>=1.6.9.0
    , refined               >=0.6      && <0.8
    , relative-time         ^>=0.1
    , stm                   ^>=2.5.0
    , terminal-size         ^>=0.3.0
    , text                  >=1.2.3.2  && <2.1
    , time                  >=1.9.3    && <1.14
    , unix                  ^>=2.7.2
    , unliftio              ^>=0.2.0.0
    , unordered-containers  ^>=0.2.9.0

  hs-source-dirs:   src
  default-language: GHC2021

library shell-run-verifier
  import:           common-exts
  exposed-modules:  Test.ShellRun.Verifier
  build-depends:
    , base
    , optics-core
    , optics-th
    , tasty-hunit
    , text

  hs-source-dirs:   test/verifier
  default-language: GHC2021

executable shell-run
  import:           common-exts
  main-is:          Main.hs
  build-depends:    shell-run
  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite unit
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.MaxRuns
    Unit.Prelude
    Unit.Props
    Unit.Props.Generators
    Unit.Props.ShellRun.Command
    Unit.Props.ShellRun.Legend.Internal
    Unit.Props.ShellRun.Logging.Formatting
    Unit.Props.ShellRun.Logging.Generators
    Unit.Props.ShellRun.Logging.Queue
    Unit.Props.ShellRun.Utils
    Unit.Specs
    Unit.Specs.ShellRun.Args
    Unit.Specs.ShellRun.Command
    Unit.Specs.ShellRun.Legend.Internal
    Unit.Specs.ShellRun.Logging.Formatting
    Unit.Specs.ShellRun.Utils

  build-depends:
    , algebra-simple
    , base
    , clock
    , hedgehog              >=1.0.2   && <1.2
    , optparse-applicative
    , refined
    , shell-run
    , tagged                ^>=0.8.6
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hedgehog        ^>=1.2.0.0
    , tasty-hunit           >=0.9     && <0.11
    , text
    , unordered-containers

  hs-source-dirs:   test/unit
  default-language: GHC2021

test-suite integration
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.IntEnv
    Integration.MockShell.BadLegendMockShell
    Integration.MockShell.GoodMockShell
    Integration.MockShell.NoLegendMockShell
    Integration.Prelude

  build-depends:
    , algebra-simple
    , base
    , concurrent-output
    , containers
    , relative-time
    , shell-run
    , shell-run-verifier
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.FuncEnv
    Functional.Prelude
    Functional.Success
    Functional.SuccessCommandLogging
    Functional.SuccessFileLogging
    Functional.SuccessNoLogging
    Functional.SuccessShowKey
    Functional.TestArgs
    Functional.Timeout
    Functional.Truncation
    Functional.Utils

  build-depends:
    , base
    , concurrent-output
    , directory
    , filepath
    , shell-run
    , shell-run-verifier
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs:   test/functional
  default-language: GHC2021

test-suite doctest
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , doctest    >=0.16.3 && <0.21
    , env-guard  ^>=0.2

  hs-source-dirs:   test/doctest
  default-language: GHC2021

benchmark benchmarks
  import:           common-exts
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  build-depends:
    , base
    , deepseq      ^>=1.4.4.0
    , shell-run
    , tasty-bench  ^>=0.3

  hs-source-dirs:   benchmarks
  default-language: GHC2021
