cabal-version:      3.4
name:               shell-runner
version:            0.1.0.0
license:            BSD-3-Clause
author:             Thomas Bidne
extra-source-files: CHANGELOG.md

library
  exposed-modules:
    ShellRunner
    ShellRunner.IO
    ShellRunner.Logger
    ShellRunner.Parsing.Args
    ShellRunner.Parsing.Commands
    ShellRunner.Parsing.Legend
    ShellRunner.Types
    ShellRunner.Types.Command
    ShellRunner.Types.IO
    ShellRunner.Types.LegendMap
    ShellRunner.Types.NonNegative
    ShellRunner.Types.Positive
    ShellRunner.Utils
  build-depends:
      async
    , base ^>=4.14.1.0
    , clock
    , containers
    , monad-loops
    , optparse-applicative
    , pretty-terminal
    , process
    , silently
    , text
  hs-source-dirs: src
  default-extensions:
    BangPatterns
    DeriveFunctor
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    NumericUnderscores
    OverloadedStrings
    ScopedTypeVariables
    TupleSections
    TypeOperators
    TypeSynonymInstances
    ViewPatterns
  ghc-options:
    -haddock
    -O2
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-home-modules
    -Wmissing-export-lists
    -Wpartial-fields
    -Wredundant-constraints
  default-language: Haskell2010

executable shell-runner
    main-is: Main.hs
    build-depends:
        base ^>=4.14.1.0
      , shell-runner
    hs-source-dirs: app
    default-extensions:
      BangPatterns
      DeriveFunctor
      FlexibleInstances
      GeneralizedNewtypeDeriving
      ImportQualifiedPost
      LambdaCase
      NamedFieldPuns
      NumericUnderscores
      OverloadedStrings
      ScopedTypeVariables
      TupleSections
      TypeOperators
      TypeSynonymInstances
      ViewPatterns
    ghc-options:
      -haddock
      -O2
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-home-modules
      -Wmissing-export-lists
      -Wpartial-fields
      -Wredundant-constraints
    default-language: Haskell2010
