cabal-version:      2.4
name:               shrun
version:            0.8.1
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.4.6 || ==9.6.2
copyright:          2021-2023 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/shrun/
bug-reports:        https://github.com/tbidne/shrun/issues
synopsis:           A utility program for running shell commands concurrently.
description:
  Please see the README at https://github.com/tbidne/shrun/#readme

category:           Shell scripting, Utils, Concurrency
extra-source-files:
  CHANGELOG.md
  examples/default.toml
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/shrun

common common-lang
  default-extensions:
    NoFieldSelectors
    NoImplicitPrelude
    NoStarIsType
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    OverloadedLabels
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies

  if os(osx)
    cpp-options: -DOSX

library
  import:           common-lang
  other-modules:    Paths_shrun
  autogen-modules:  Paths_shrun
  exposed-modules:
    Shrun
    Shrun.Configuration.Args
    Shrun.Configuration.Args.TH
    Shrun.Configuration.Env
    Shrun.Configuration.Env.Notify
    Shrun.Configuration.Env.Types
    Shrun.Configuration.Legend
    Shrun.Configuration.Toml
    Shrun.Data.Command
    Shrun.Data.FilePathDefault
    Shrun.Data.Legend
    Shrun.Data.Phase
    Shrun.Data.PollInterval
    Shrun.Data.Timeout
    Shrun.Data.TimerFormat
    Shrun.IO
    Shrun.IO.Types
    Shrun.Logging
    Shrun.Logging.Formatting
    Shrun.Logging.RegionLogger
    Shrun.Logging.Types
    Shrun.Logging.Types.Internal
    Shrun.Notify
    Shrun.Notify.AppleScript
    Shrun.Notify.DBus
    Shrun.Notify.Notify
    Shrun.Notify.NotifySend
    Shrun.Notify.Types
    Shrun.Prelude
    Shrun.Utils

  build-depends:
    , base                     >=4.17     && <4.19
    , bytestring               >=0.10.12  && <0.12
    , concurrent-effectful     ^>=0.1
    , concurrent-output        ^>=1.10.7
    , containers               ^>=0.6.2.1
    , dbus                     ^>=1.2.14
    , effectful                >=2.2.1.0  && <2.4
    , exceptions-effectful     ^>=0.1
    , fdo-notify               ^>=0.3.1
    , fs-effectful             ^>=0.1
    , hashable                 >=1.3.0.0  && <1.5
    , ioref-effectful          ^>=0.1
    , nonempty-containers      >=0.3.4.2  && <0.4
    , optics-core              ^>=0.4
    , optics-th                ^>=0.4
    , optparse-applicative     >=0.15     && <0.19
    , optparse-effectful       ^>=0.1
    , pretty-terminal          ^>=0.1
    , relative-time            ^>=0.1
    , si-bytes                 ^>=0.1
    , stm-effectful            ^>=0.1
    , template-haskell         >=2.17.0.0 && <2.21
    , terminal-effectful       ^>=0.1
    , text                     >=1.2.3.2  && <2.1
    , time-effectful           ^>=0.1
    , toml-reader              >=0.2.0.0  && <0.3.0.0
    , typed-process-effectful  ^>=1.0.0.0
    , unordered-containers     ^>=0.2.9.0

  hs-source-dirs:   src
  default-language: GHC2021

library shrun-verifier
  import:           common-lang
  exposed-modules:  Test.Shrun.Verifier
  build-depends:
    , base
    , optics-core
    , optics-th
    , tasty-hunit
    , text

  hs-source-dirs:   test/verifier
  default-language: GHC2021

executable shrun
  import:           common-lang
  main-is:          Main.hs
  build-depends:
    , base
    , fs-effectful
    , ioref-effectful
    , optparse-effectful
    , shrun
    , terminal-effectful
    , time-effectful
    , typed-process-effectful

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Generators
    Unit.Prelude
    Unit.Shrun.Configuration.Args
    Unit.Shrun.Configuration.Legend
    Unit.Shrun.Logging.Formatting
    Unit.Shrun.Logging.Generators
    Unit.Shrun.Utils

  build-depends:
    , base
    , effectful
    , hedgehog              >=1.0.2   && <1.6
    , optparse-applicative
    , shrun
    , si-bytes
    , tasty                 >=1.1.0.3 && <1.5
    , tasty-hedgehog        >=1.2.0.0 && <1.6
    , tasty-hunit           >=0.9     && <0.11
    , text
    , time                  >=1.9.3   && <1.14
    , time-effectful
    , unordered-containers

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite integration
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.Defaults
    Integration.Examples
    Integration.Failures
    Integration.Miscellaneous
    Integration.Prelude
    Integration.Utils

  build-depends:
    , base
    , containers
    , dbus
    , effectful
    , exceptions-effectful
    , fs-effectful
    , nonempty-containers
    , shrun
    , tasty
    , tasty-hunit
    , terminal-effectful
    , text

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Miscellaneous
    Functional.Notify
    Functional.Prelude
    Functional.Readme
    Functional.Success
    Functional.SuccessCommandLogging
    Functional.SuccessFileLogging
    Functional.SuccessShowKey
    Functional.TestArgs
    Functional.Timeout
    Functional.Truncation

  build-depends:
    , base
    , effectful
    , fdo-notify
    , fs-effectful
    , optparse-effectful
    , shrun
    , shrun-verifier
    , tasty
    , tasty-hunit
    , terminal-effectful
    , text
    , time-effectful
    , typed-process-effectful

  hs-source-dirs:   test/functional
  default-language: GHC2021

benchmark benchmarks
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Bench.Prelude
  build-depends:
    , base
    , deepseq                  >=1.4.4.0 && <1.6
    , effectful
    , env-guard                ^>=0.2
    , fs-effectful
    , optparse-effectful
    , shrun
    , tasty-bench              ^>=0.3
    , terminal-effectful
    , time-effectful
    , typed-process-effectful

  hs-source-dirs:   benchmarks
  default-language: GHC2021
