cabal-version:      2.4
name:               shrun
version:            0.9
license:            MIT
license-file:       LICENSE
tested-with:        GHC ==9.4.8 || ==9.6.3 || ==9.8.1
copyright:          2021-2024 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/shrun/
bug-reports:        https://github.com/tbidne/shrun/issues
synopsis:           A utility program for running shell commands concurrently.
description:
  Please see the README at https://github.com/tbidne/shrun/#readme

category:           Shell scripting, Utils, Concurrency
extra-source-files:
  CHANGELOG.md
  examples/default.toml
  README.md

source-repository head
  type:     git
  location: https://github.com/tbidne/shrun

common common-lang
  default-extensions:
    ApplicativeDo
    DataKinds
    DeriveAnyClass
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    MultiWayIf
    NoFieldSelectors
    NoImplicitPrelude
    NoStarIsType
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    StrictData
    TypeFamilies

  if os(osx)
    cpp-options: -DOSX

library
  import:           common-lang
  other-modules:    Paths_shrun
  autogen-modules:  Paths_shrun
  exposed-modules:
    Shrun
    Shrun.Configuration
    Shrun.Configuration.Args
    Shrun.Configuration.Args.Parsing
    Shrun.Configuration.Args.Parsing.CmdLogging
    Shrun.Configuration.Args.Parsing.Core
    Shrun.Configuration.Args.Parsing.FileLogging
    Shrun.Configuration.Args.Parsing.Notify
    Shrun.Configuration.Args.Parsing.Utils
    Shrun.Configuration.Args.TH
    Shrun.Configuration.Data.CmdLogging
    Shrun.Configuration.Data.ConfigPhase
    Shrun.Configuration.Data.Core
    Shrun.Configuration.Data.FileLogging
    Shrun.Configuration.Data.MergedConfig
    Shrun.Configuration.Data.Notify
    Shrun.Configuration.Data.WithDisabled
    Shrun.Configuration.Legend
    Shrun.Configuration.Toml
    Shrun.Data.Command
    Shrun.Data.FileMode
    Shrun.Data.FilePathDefault
    Shrun.Data.FileSizeMode
    Shrun.Data.KeyHide
    Shrun.Data.Legend
    Shrun.Data.Phase
    Shrun.Data.PollInterval
    Shrun.Data.StripControl
    Shrun.Data.Timeout
    Shrun.Data.TimerFormat
    Shrun.Data.Truncation
    Shrun.Env
    Shrun.Env.Notify
    Shrun.Env.Types
    Shrun.IO
    Shrun.IO.Types
    Shrun.Logging
    Shrun.Logging.Formatting
    Shrun.Logging.MonadRegionLogger
    Shrun.Logging.Types
    Shrun.Logging.Types.Internal
    Shrun.Notify
    Shrun.Notify.MonadAppleScript
    Shrun.Notify.MonadDBus
    Shrun.Notify.MonadNotify
    Shrun.Notify.MonadNotifySend
    Shrun.Notify.Types
    Shrun.Prelude
    Shrun.ShellT
    Shrun.Utils

  build-depends:
    , base                   >=4.17     && <4.20
    , bytestring             >=0.10.12  && <0.13
    , concurrent-output      ^>=1.10.7
    , containers             >=0.6.2.1  && <0.8
    , dbus                   >=1.2.14   && <1.4
    , effects-async          ^>=0.1
    , effects-env            ^>=0.1
    , effects-exceptions     ^>=0.1
    , effects-fs             ^>=0.1
    , effects-ioref          ^>=0.1
    , effects-optparse       ^>=0.1
    , effects-stm            ^>=0.1
    , effects-terminal       ^>=0.1
    , effects-thread         ^>=0.1
    , effects-time           ^>=0.1
    , effects-typed-process  ^>=0.1
    , fdo-notify             ^>=0.3.1
    , hashable               >=1.3.0.0  && <1.5
    , mtl                    >=2.2.1    && <2.4
    , nonempty-containers    >=0.3.4.2  && <0.4
    , optics-core            ^>=0.4
    , optics-th              ^>=0.4
    , optparse-applicative   >=0.15     && <0.19
    , pretty-terminal        ^>=0.1
    , relative-time          ^>=0.1
    , si-bytes               ^>=0.1
    , template-haskell       >=2.17.0.0 && <2.22
    , text                   >=1.2.3.2  && <2.2
    , toml-reader            >=0.2.0.0  && <0.3.0.0
    , unordered-containers   ^>=0.2.9.0

  hs-source-dirs:   src
  default-language: GHC2021

library shrun-verifier
  import:           common-lang
  exposed-modules:  Test.Shrun.Verifier
  build-depends:
    , base
    , optics-core
    , optics-th
    , tasty-hunit
    , text

  hs-source-dirs:   test/verifier
  default-language: GHC2021

executable shrun
  import:           common-lang
  main-is:          Main.hs
  build-depends:
    , base
    , shrun

  hs-source-dirs:   app
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite unit
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Unit.Generators
    Unit.Prelude
    Unit.Shrun.Configuration.Args
    Unit.Shrun.Configuration.Data.WithDisabled
    Unit.Shrun.Configuration.Legend
    Unit.Shrun.Logging.Formatting
    Unit.Shrun.Logging.Generators
    Unit.Shrun.Utils

  build-depends:
    , base
    , effects-time
    , hedgehog              >=1.0.2   && <1.5
    , optparse-applicative
    , shrun
    , tasty                 >=1.1.0.3 && <1.6
    , tasty-hedgehog        >=1.2.0.0 && <1.5
    , tasty-hunit           >=0.9     && <0.11
    , text
    , time                  >=1.9.3   && <1.14
    , unordered-containers

  hs-source-dirs:   test/unit
  ghc-options:      -threaded -with-rtsopts=-N
  default-language: GHC2021

test-suite integration
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Integration.Defaults
    Integration.Examples
    Integration.Failures
    Integration.Miscellaneous
    Integration.Prelude
    Integration.Utils

  build-depends:
    , base
    , dbus
    , effects-exceptions
    , effects-fs
    , effects-terminal
    , hedgehog
    , nonempty-containers
    , shrun
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , text

  hs-source-dirs:   test/integration
  default-language: GHC2021

test-suite functional
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
    Functional.Buffering
    Functional.Examples
    Functional.Miscellaneous
    Functional.Notify
    Functional.Prelude
    Functional.Success
    Functional.SuccessCommandLogging
    Functional.SuccessFileLogging
    Functional.SuccessShowKey
    Functional.TestArgs
    Functional.Timeout
    Functional.Truncation

  build-depends:
    , base
    , effects-fs
    , env-guard
    , fdo-notify
    , shrun
    , shrun-verifier
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs:   test/functional
  default-language: GHC2021

test-suite notify
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:
  build-depends:
    , base
    , env-guard
    , shrun
    , tasty
    , tasty-hunit
    , text

  hs-source-dirs:   test/notify
  default-language: GHC2021

benchmark benchmarks
  import:           common-lang
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  other-modules:    Bench.Prelude
  build-depends:
    , base
    , deepseq      >=1.4.4.0 && <1.6
    , effects-fs
    , env-guard    ^>=0.2
    , shrun
    , tasty-bench  ^>=0.3

  hs-source-dirs:   benchmarks
  default-language: GHC2021
